# absolution

./: Cargo.toml  README.md
.github/workflows/: tests.yml
absolution-hack/: Cargo.toml
absolution-hack/demo-hack/: Cargo.toml
absolution-hack/demo-hack-impl/: Cargo.toml
absolution-hack/demo-hack-impl/src/: lib.rs
absolution-hack/demo-hack/src/: lib.rs
absolution-hack/example/: Cargo.toml
absolution-hack/src/: lib.rs
examples/string-enum/: Cargo.toml
examples/string-enum/examples/: simple.rs
examples/string-enum/src/: lib.rs
src/: bigint.rs  lib.rs  literal.rs
tests/: roundtrip.rs
