[package]
name = "string-enum"
version = "0.1.0"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
absolution = { path = "../.."}
proc-macro2 = "1.0.9"
quote = "1.0.3"
